# ima-note-cli

./: .env.example  .gitignore  BATCH_A_IMPLEMENTATION_PLAN.md  BATCH_B_IMPLEMENTATION_PLAN.md  BATCH_C_IMPLEMENTATION_PLAN.md  OPTIMIZATION_PLAN.md  README.md  STAGE_6_IMPLEMENTATION_PLAN.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: API_CONTRACT_1_1_7.md  CLI_REFERENCE.md  IMA_OPENAPI_CONTRACT_1_1_7.md  KNOWLEDGE_MEDIA_CONTRACT_1_1_7.md  SKILL_DISTRIBUTION_POLICY.md  SKILL_MIGRATION_1_1_7.md
skills/: manifest.json
skills/ima-note/: SKILL.md
skills/ima-note-cli/: SKILL.md
skills/ima-note-cli/agents/: openai.yaml
src/ima_note_cli/: __init__.py  api.py  cli.py  command_result.py  config.py  cos_http.py  errors.py  http.py  knowledge_api.py  knowledge_cli.py  knowledge_upload.py  media_service.py  notes_api.py  notes_cli.py  notes_content.py  output.py  pagination.py  protocol.py  remote_http.py  security.py  source_http.py  upload_service.py  url_ingest.py  validation.py
tests/: __init__.py  _fixtures.py  test_cli.py  test_cli_batch_b.py  test_cli_batch_c.py  test_command_result.py  test_config.py  test_cos_http.py  test_errors.py  test_http.py  test_http_batch_b.py  test_knowledge_api.py  test_knowledge_upload.py  test_media_service.py  test_notes_api.py  test_notes_content.py  test_output.py  test_pagination.py  test_protocol.py  test_remote_http.py  test_repository_docs.py  test_security.py  test_security_batch_c.py  test_source_http.py  test_upload_service.py  test_url_ingest.py
tools/: check_repository_docs.py  render_cli_reference.py
(+35 files in other folders)
